kong-ingress-controller-multi-service/common-public/backend-team/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend-hello-world
  namespace: backend
spec:
  hostnames:
  - gateway-api-backend.tajawal.io
  parentRefs:
    - name: kong-gateway-common-teams
      namespace: public-gateway-http
      sectionName: http-common
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nginx-hello-world-service
          port: 80
